--- a/CodeHub/index.html
+++ b/CodeHub/index.html
@@ -15,6 +15,7 @@
     <link href="Application/Directives/Header/Header.css" rel="stylesheet" />
     <link href="Application/Views/Start/Start.css" rel="stylesheet" />
     <link href="Application/Views/Portfolio/Portfolio.css" rel="stylesheet" />
+    <link href="Application/Directives/CourseList/CourseList.css" rel="stylesheet" />
     <link href="Application/Application.css" rel="stylesheet" />
 
 </head>
@@ -41,6 +42,7 @@
     <!--Custom scripts-->
     <script src="Application/Application.js"></script>
     <script src="Application/Directives/Header/Header.js"></script>
+    <script src="Application/Directives/CourseList/CourseList.js"></script>
     <script src="Application/Views/Portfolio/PortfolioController.js"></script>
 
 </body>
